# stargazer

./: CMakeLists.txt  LICENSE  README.md  manifest.xml  marker_map.yaml  package.xml  setup.py  stargazer_publisher.py
config/: marker_map.yaml
scripts/: stargazer_publisher.py
src/stargazer/: __init__.py  stargazer.py  transformations.py
