<?xml version="1.0"?>
<package format="2">
  <name>stargazer</name>
  <version>0.0.0</version>
  <description>
    Publish data from Hagisonic Stargazer, with no filtering.
  </description>
  <url type="repository">https://github.com/personalrobotics/stargazer.git</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mdawsonh@cs.cmu.edu">Michael Dawson-Haggerty</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="eashapir@andrew.cmu.edu">Evan Shapiro</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
